# ThermoMPNN

./: CHANGES.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
models/: __init__.py
preprocessing/: 2_seqalign_fireprot_dataset.py
thermompnn/: __init__.py  cache.py  datasets.py  train_thermompnn.py  transfer_model.py
thermompnn/analysis/: SSM.py  __init__.py  custom_inference.py  thermompnn_benchmarking.py
