[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["thermompnn", "thermompnn.*", "models"]

[tool.setuptools.package-data]
models = ["*.pt"]
thermompnn = ["config.yaml", "local.yaml", "dataset_splits/*.pkl"]

[project]
name = "thermompnn"
version = "1.0.0"
description = "A graph neural network for predicting changes in protein stability"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Henry Dieckhaus"},
    {name = "Michael Brocidiacono"},
    {name = "Nicholas Z. Randolph"},
    {name = "Brian Kuhlman", email = "kuhlman@email.unc.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "pytorch-lightning",
    "biopython",
    "wandb",
    "tqdm",
    "pandas",
    "numpy",
    "omegaconf",
    "joblib",
]

[project.urls]
Homepage = "https://github.com/Kuhlman-Lab/ThermoMPNN"